when converting an object with transfer none, make sure the wrapper owns a ref

https://bugzilla.gnome.org/show_bug.cgi?id=661359